# ImGuiX

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README-RU.md  README.md  THIRD-PARTY-NOTICES.md  build-emscripten-sdl2.bat  build-mingw-glfw.bat  build-mingw-sfml-only-sdk.bat  build-mingw-sfml.bat  build-mingw.bat  build-msvc-glfw.bat  build-test-sdl2-ems.bat  emscripten-index.html  run-emscripten-sdl2.bat  run-test-sdl2-ems.bat
.github/workflows/: ci-linux-gcc.yml  ci-mingw.yml
agents/: README.md  imguix-fonts-i18n-playbook.md  imguix-smoke-build.md  imguix-windowing-playbook.md
assets/data/resources/fonts/: CREDITS.md  README.md  fonts.json
assets/data/resources/i18n/: plurals.json
assets/data/web/: shell-fullscreen.html
cmake/: ImGuiXConfig.cmake.in  ImGuiXDemos.cmake
docs/: ARCHITECTURE-RU.md  ARCHITECTURE.md  CONFIGURATION-RU.md  CONFIGURATION.md  FONTS-GUIDE-RU.md  FONTS-GUIDE.md  I18N-GUIDE-RU.md  I18N-GUIDE.md  STYLE-GUIDE-RU.md  STYLE-GUIDE.md  THEMES-RU.md  THEMES.md  WIDGETS-RU.md  WIDGETS.md  WINDOWS-GUIDE-RU.md  WINDOWS-GUIDE.md
examples/framed_showcase/: CMakeLists.txt
examples/list_editor/: CMakeLists.txt  main.cpp
examples/quickstart/: CMakeLists.txt  build-mingw.bat  main.cpp
examples/smoke/: backend_demo.cpp  corner_icon_area_demo.cpp  corner_icon_area_demo_v2.cpp  corner_icon_area_demo_v3.cpp  corner_icon_area_demo_v3_mac.cpp  corner_icon_area_demo_v3_no_top_left.cpp  corner_icon_area_demo_v4.cpp  corner_icon_area_off_demo.cpp  corner_icon_area_off_no_menu_demo.cpp  corner_icon_area_off_no_menu_odd_title_demo.cpp  corner_icon_area_off_no_side_demo.cpp  font_switch_demo.cpp  framed_showcase.cpp  framed_window_demo.cpp  i18n_demo.cpp  theme_custom_values_demo.cpp  widgets_demo.cpp
include/imguix/: config.hpp  controllers.hpp  core.hpp  extensions.hpp  themes.hpp  utils.hpp  widgets.hpp  windows.hpp
include/imguix/config/: build.hpp  colors.hpp  config.hpp  fonts.hpp  i18n.hpp  icons.hpp  imconfig-imguix.hpp  notifications.hpp  options.hpp  paths.hpp  sizing.hpp  theme_config.hpp
include/imguix/controllers/: ApplicationController.hpp  ExtendedController.hpp  StrategicController.hpp
include/imguix/core/: ResourceRegistry.hpp  ResourceRegistry.ipp  events.hpp  i18n.hpp  pubsub.hpp
include/imguix/core/application/: Application.hpp  Application.ipp  ApplicationContext.hpp  ApplicationControl.hpp
include/imguix/core/controller/: Controller.hpp
include/imguix/core/events/: ApplicationExitEvent.hpp  LangChangeEvent.hpp  LogEvent.hpp  WindowClosedEvent.hpp
include/imguix/core/fonts/: FontManager.hpp  FontManager.ipp  FontManagerControlCRTP.hpp  FontManagerViewCRTP.hpp  font_types.hpp
include/imguix/core/i18n/: LangStore.hpp  LangStore.ipp  PluralRules.hpp  PluralRules.ipp
include/imguix/core/model/: FeatureAccess.hpp  FeatureModel.hpp  ILocalModel.hpp  LocalModelRegistry.hpp  Model.hpp
include/imguix/core/notify/: Notification.hpp  NotificationManager.hpp  NotificationManager.ipp  NotificationTypes.hpp
include/imguix/core/options/: OptionsStore.hpp  OptionsStore.ipp  OptionsStoreControlCRTP.hpp  OptionsStoreViewCRTP.hpp
include/imguix/core/pubsub/: Event.hpp  (+11 more)
include/imguix/events/: MetricsPlotSetUpdateEvent.hpp  MetricsPlotUpdateEvent.hpp
include/imguix/extensions/: blend_colors.hpp  blend_colors.ipp  color_gradient.hpp  color_gradient.ipp  color_utils.hpp  color_utils.ipp  ema.hpp  ema.ipp  force_opaque_style.hpp  force_opaque_style.ipp  scoped_disable.hpp  scoped_disable.ipp  sizing.hpp  validation.hpp  validation.ipp
include/imguix/themes/: CorporateGreyTheme.hpp  CyberY2KTheme.hpp  CyberpunkUITheme.hpp  DarkCharcoalTheme.hpp  DarkGraphiteTheme.hpp  DarkTealTheme.hpp  DeepDarkTheme.hpp  GoldBlackTheme.hpp  GreenBlueTheme.hpp  JsonBackedTheme.hpp  LightBlueTheme.hpp  LightGreenTheme.hpp  NightOwlTheme.hpp  NordTheme.hpp  OSXTheme.hpp  PearlLightTheme.hpp  SlateDarkTheme.hpp  Theme.hpp  ThemeManager.hpp  TokyoNightStormTheme.hpp  TokyoNightTheme.hpp  VisualStudioDarkTheme.hpp  Y2KTheme.hpp  theme_ids.hpp  themes.hpp
include/imguix/utils/: base64.hpp  encoding_utils.hpp  encoding_utils.ipp  path_utils.hpp  path_utils.ipp  pubsub.hpp  strip_json_comments.hpp  strip_json_comments.ipp  time_utils.hpp  time_utils.ipp  vformat.hpp
include/imguix/widgets/: arrow_stepper.hpp  auth_js_panel.hpp  auth_panel.hpp  calendar_date_picker.hpp  circle_button.hpp  date_picker.hpp  days_selector.hpp  domain_selector.hpp  external_widgets_demo.hpp  hours_selector.hpp  icon_button.hpp  input_vertical_stepper.hpp  list_editor.hpp  loading_spinner.hpp  markers.hpp  proxy_panel.hpp  system_button.hpp  text_center.hpp  time_picker.hpp  toggle_button.hpp  validated_input.hpp  validated_password_input.hpp  vertical_stepper_buttons.hpp  virtual_keyboard.hpp  virtual_keyboard_overlay.hpp  weekday_picker.hpp
include/imguix/windows/: GlfwImGuiFramedWindow.ipp  ImGuiFramedWindow.hpp  ImGuiFramedWindow.ipp  Sdl2ImGuiFramedWindow.ipp  SfmlImGuiFramedWindow.ipp  corner_layout_options.hpp  window_flags.hpp
libs/: CMakeLists.txt
libs/cmake/: copy-and-embed-app-icon.cmake  imgui-fonts.cmake  imgui-glfw-wrapper.cmake  imgui-sdl2-gles-wrapper.cmake  imgui-wrapper.cmake  imguix-fonts.cmake  imguix-headers.cmake  link_local_libs.cmake  prepare-imgui-glfw-deps.cmake  prepare-imgui-sdl2-deps.cmake  prepare-imgui-sfml-deps.cmake  sfml-wrapper.cmake
src/: imguix.cpp  imguix_static.cpp
tests/: demo_backend.cpp  imgui-backend.cpp  imgui-glfw.cpp  imgui-i18n-test.cpp  imgui-multiple-windows.cpp  imgui-sdl2.cpp  imgui-sfml.cpp  test-core-application.cpp  test-event-await.cpp  test-event-cache.cpp  test-event-system.cpp  test-framed-window.cpp  test-list-editor.cpp  test-resource-registry.cpp  test-widgets.cpp  test_all_widgets.cpp  test_base64.cpp  test_ema.cpp  test_event_await.cpp  test_event_cache.cpp  test_event_system.cpp  test_event_unsubscribe.cpp  test_font_preset_ranges.cpp  test_framed_window.cpp  test_pubsub_entrypoint.cpp  test_resource_registry.cpp  test_resource_registry_race.cpp  test_theme_value_utils.cpp  test_widgets.cpp
(+115 files in other folders)
